--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class="caja">
-                <h1><img src="imagenes/logo.png"></h1>
+                <h1><img src="./imagenes/logo.png"></h1>
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -25,13 +25,13 @@
             </div>
         </header>
 
-        <img class="banner" src="imagenes/banner.jpg">
+        <img class="banner" src="./imagenes/banner.jpg">
 
         <main>
             <section class="principal">
                 <h2 class="titulo-principal">Sobre la Barbería Alura</h2>
 
-                <img class="utensilios" src="/imagenes/utensilios.jpg" alt="Utensilios de barbería">
+                <img class="utensilios" src="./imagenes/utensilios.jpg" alt="Utensilios de barbería">
             
                 <p>Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de mejor para su 
                     cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p> 
@@ -64,7 +64,7 @@
                         <li class="items">Profesionales calificados</li>
                         <li class="items">Puntualidad</li>
                         <li class="items">Limpieza</li>
-                    </ul><img src="imagenes/diferenciales.jpg" class="imagen-diferenciales">
+                    </ul><img src="./imagenes/diferenciales.jpg" class="imagen-diferenciales">
                 </div>
                 <div class="video">
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" frameborder="0" 
@@ -74,7 +74,7 @@
         </main>
 
         <footer>
-            <img src="imagenes/logo-blanco.png">
+            <img src="./imagenes/logo-blanco.png">
             <p class="copyright">&copy Copyright Barbería Alura - 2022</p>
         </footer>
     </body>
